# weaver-curve-app

./: README.md  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/templates/: template.typ
src-tauri/src/: main.rs
src/components/: score_card.svelte  weaver_plot.svelte
src/routes/: +layout.ts  +page.svelte  Tick.svelte  score_card.svelte  weaver_plot.svelte
