[package]
name = "weaver-curve-app"
version = "1.2.1"
description = "A software app designed to help medical providers run a Weaver Curve with Gestational Age Correction"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interp = "1.0.3"
printpdf = { version = "0.7.0", features = ["embedded_images"] }
tauri-plugin-dialog = "2.0.0-rc.0"
charming = { version = "0.3.1", features = ["ssr"] }
dev = "0.1.0"
genpdf = { version = "0.2.0", features = ["images"] }

