[package]
name = "weaver-curve-app"
version = "1.3.0"
description = "A software app designed to help medical providers run a Weaver Curve with Gestational Age Correction"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
interp = "1.0.3"
tauri-plugin-dialog = "2.0.0-rc.0"
plotly = { version = "0.9.0", features = ["kaleido"] }
tempfile = "3.12.0"
typst = "0.11.1"

